--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,27 @@
         android:theme="@style/Theme.Todolist"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".SignIn"
+            android:exported="false" />
+        <activity
+            android:name=".createAccount"
+            android:exported="true" />
+        <activity
+            android:name=".SplashScreenPage"
+            android:exported="true"
+            android:theme="@style/Theme.Todolist">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WelcomePage"
+            android:exported="true" />
     </application>
 
 </manifest>
