--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_red"
         android:supportsRtl="true"
         android:theme="@style/Theme.Todolist"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
             android:name=".createAccount"
             android:exported="false" />
         <activity
-            android:name=".SplashScreenPage"
+            android:name=".MainActivity"
             android:exported="false"
             android:theme="@style/Theme.Todolist">
         </activity>
