--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Todolist"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
+            android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,13 +22,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUp"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".SignIn"
+            android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".createAccount"
+            android:name=".CreateAccountActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -36,7 +36,7 @@
             android:theme="@style/Theme.Todolist">
         </activity>
         <activity
-            android:name=".WelcomePage"
+            android:name=".WelcomePageActivity"
             android:exported="false" />
     </application>
 
