--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.Todolist">
-        </activity>
+            android:theme="@style/Theme.Todolist"/>
         <activity
             android:name=".WelcomePageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LandingPageActivity"
             android:exported="false" />
     </application>
 
