--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity
             android:name=".CreateTaskActivity"
             android:exported="false" />
+        <activity android:name=".NewCategoryActivity" android:exported="false" />
+        <activity android:name=".ManageCategoryActivity" android:exported="false" />
+        <activity android:name=".LandingActivity" android:exported="false" />
     </application>
 
 </manifest>
