--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Todolist"
         tools:targetApi="31">
         <activity
+            android:name=".CompletedTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
@@ -55,9 +58,15 @@
         <activity
             android:name=".CreateTaskActivity"
             android:exported="false" />
-        <activity android:name=".NewCategoryActivity" android:exported="false" />
-        <activity android:name=".ManageCategoryActivity" android:exported="false" />
-        <activity android:name=".LandingActivity" android:exported="false" />
+        <activity
+            android:name=".NewCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManageCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LandingActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
